--- a/UI-MVC.Tests/packages.config
+++ b/UI-MVC.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="4.2.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
@@ -26,6 +27,7 @@
   <package id="Microsoft.Web.Administration" version="7.0.0.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
+  <package id="MyTested.WebApi" version="1.2.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Selenium.Support" version="2.52.0" targetFramework="net452" />
