--- a/DAL/App.config
+++ b/DAL/App.config
@@ -6,12 +6,8 @@
     
   </configSections>
   <connectionStrings>
-    <add name="BeatBuddy"
-         connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddy;Persist Security Info=True;User ID=teamd;Password=Integratieproject2"
-         providerName="System.Data.SqlClient" />
-    <add name="BeatBuddyTest"
-         connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddyTest;Persist Security Info=True;User ID=teamd;Password=Integratieproject2"
-         providerName="System.Data.SqlClient" />
+    <add name="BeatBuddy" connectionString="Data Source=mssql2.gear.host;Initial Catalog=beatbuddy;Persist Security Info=True;User ID=beatbuddy;Password=Qm58~SEiNa8~;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="BeatBuddyTest" connectionString="Data Source=mssql2.gear.host;Initial Catalog=beatbuddyTest;Persist Security Info=True;User ID=beatbuddytest;Password=Fx77D-4?34qS;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
