--- a/UI-MVC/packages.config
+++ b/UI-MVC/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.6" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Facebook" version="7.0.6" targetFramework="net452" />
   <package id="jQuery" version="2.2.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
