--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -505,6 +505,7 @@
     <Content Include="Views\Playlist\Chat.cshtml" />
     <Content Include="Views\Comment\_CommentsPartial.cshtml" />
     <Content Include="Views\Playlist\AddPlaylist.cshtml" />
+    <Content Include="Views\Home\SearchOrganisation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Img\Organisations\" />
