--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -506,6 +506,7 @@
     <Content Include="Views\Comment\_CommentsPartial.cshtml" />
     <Content Include="Views\Playlist\AddPlaylist.cshtml" />
     <Content Include="Views\Home\SearchOrganisation.cshtml" />
+    <Content Include="Views\Home\MyPlaylists.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Img\Organisations\" />
