--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -511,6 +511,7 @@
     <Content Include="Views\Comment\_CommentsPartial.cshtml" />
     <Content Include="Views\Playlist\AddPlaylist.cshtml" />
     <Content Include="Views\Home\SearchOrganisation.cshtml" />
+    <Content Include="Views\Account\_ExternalRegisterListPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Img\Organisations\" />
