Implemented sharing a playlist with Facebook and Twitter

--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -516,6 +516,7 @@
     <Content Include="Views\Home\SearchOrganisation.cshtml" />
     <Content Include="Views\Playlist\PlaylistGrid.cshtml" />
     <Content Include="Views\Home\MyPlaylists.cshtml" />
+    <Content Include="Views\Playlist\Share.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Img\Organisations\" />
