--- a/BL.Tests/BL.Tests.csproj
+++ b/BL.Tests/BL.Tests.csproj
@@ -77,6 +77,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AlbumArtProviderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PlaylistManagerUnitTest.cs" />
     <Compile Include="UserManagerUnitTest.cs" />
